--- a/less/base.less
+++ b/less/base.less
@@ -114,6 +114,8 @@ body {
     padding: 0 .1rem;
     .search {
         text-indent: 20px;
+        margin-bottom: 0;
+        text-align: left;
         flex: 1;
         height: .3rem;
         background-color: #f1f1f1;
