更新商品排行

--- a/less/brand-content.less
+++ b/less/brand-content.less
@@ -35,6 +35,7 @@ body {
   }
   .content {
     width: 100%;
+    margin-bottom: 20px;
     [data-content="tab1"] {
       width: 100%;
       >.brandranking-wrap {
