--- a/less/base.less
+++ b/less/base.less
@@ -72,7 +72,8 @@ body {
     height: 100%;
     width: 58%;
     img {
-      width: 100%;
+      // width: 100%;
+      height: 80%;
     }
   }
   .left {
