--- a/less/index.css
+++ b/less/index.css
@@ -57,7 +57,7 @@ body {
   width: 58%;
 }
 #header .logo img {
-  width: 100%;
+  height: 80%;
 }
 #header .left {
   width: .45rem;
@@ -149,7 +149,7 @@ body {
   position: relative;
 }
 #main #menu {
-  margin-top: -0.05rem;
+  margin-top: 0.18rem;
   display: flex;
   flex-wrap: wrap;
 }
